# fesh-cli

./: .gitignore  CMakeLists.txt  README.md  cleanup_for_release.bat  input.txt
data/: c.txt  d.txt  key.txt  m.txt  r_key.txt
include/: fesh.h  image.h  modes.h
legacy/: FESH128_128.cpp  dec.cpp  enc.cpp  pic_dec.cpp  pic_enc.cpp
samples/: input.txt
src/: cli.cpp  fesh.cpp  image.cpp  modes.cpp
